--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
 
 
-.CodeMirror-scroll {
-    overflow: scroll !important;
-    margin-bottom: -30px;
-    margin-right: -30px;
-    padding-bottom: 30px;
-    height: 100%;
-    outline: none;
-    position: relative;
+element.style {
 }
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+.w3-container, .w3-panel {
+    padding: 0.01em 16px;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -22,23 +13,6 @@ div {
     display: block;
     unicode-bidi: isolate;
 }
-.CodeMirror.cm-s-default {
-    line-height: normal;
-    padding: 4px;
-    height: 100%;
-    width: 100%;
-}
-.CodeMirror {
-    font-family: Consolas, Menlo, monospace;
-    font-size: 15px;
-    height: 300px;
-    color: black;
-}
-body {
-    color: #000000;
-    margin: 0px;
-    font-size: 100%;
-}
 html, body {
     font-family: Verdana, sans-serif;
     font-size: 15px;
@@ -47,4 +21,20 @@ html, body {
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+}
+.w3-container:after, .w3-container:before, .w3-panel:after, .w3-panel:before, .w3-row:after, .w3-row:before, .w3-row-padding:after, .w3-row-padding:before, .w3-cell-row:before, .w3-cell-row:after, .w3-clear:after, .w3-clear:before, .w3-bar:before, .w3-bar:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+.w3-container:after, .w3-container:before, .w3-panel:after, .w3-panel:before, .w3-row:after, .w3-row:before, .w3-row-padding:after, .w3-row-padding:before, .w3-cell-row:before, .w3-cell-row:after, .w3-clear:after, .w3-clear:before, .w3-bar:before, .w3-bar:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
 }
